# stocks

./: .gitignore  AGENTS.md  CLAUDE.md  Colab.ipynb  GIT_PUSHER_README.md  README.md  ROADMAP.md  TODO.md  git_pusher.py  package-lock.json  portfolio.toml  pyproject.toml  requirements.txt  test_git_pusher.py  trading_advisor.py
.claude/agents/: verifier.md
colab_setup/: build_wheels.sh  colab_dependency_manager.py  colab_requirements.txt  install_colab.sh  install_colab_chunked.sh  install_from_wheels.sh  install_python.sh  install_python310.sh  model_validator.py  system_validator.py  test_colab_setup.py  verify_colab_setup.py
src/: __init__.py
src/analysis/: market_analyzer.py  performance_attribution.py  sector_rotation_analyzer.py
src/api/: inference_server.py
src/backtesting/: __init__.py  backtest_engine.py  phase7_backtest_framework.py
src/config/: __init__.py  settings.py
src/data/: __init__.py  backup_data_sources.py  database.py  ingester.py  validator.py
src/features/: __init__.py  cross_asset_features.py  feature_selection_pipeline.py  meta_feature_extractor.py  microstructure_features.py  sentiment_features.py  technical_feature_generator.py  volatility_regime_features.py
src/models/: __init__.py  efficient_prediction_pipeline.py  enhanced_uncertainty_system.py  ensemble.py  memory_optimization.py  model_monitor.py  neural_hyperparams.py  neural_meta_learner.py  online_learner.py  optimized_neural_meta_learner.py  regime_detector.py  (+6 more)
tests/: __init__.py  test_alerts.py  test_cross_asset_features.py  test_data_pipeline.py  test_enhanced_uncertainty.py  test_feature_selection_pipeline.py  test_microstructure_features.py  test_model_drift.py  test_models.py  test_multi_resolution.py  test_performance_regression.py  test_phase7_integration.py  test_portfolio_analysis.py  test_recommendation_validation.py  test_sentiment_features.py  test_signal_generation.py  test_technical_feature_generator.py  test_tft_integration.py  test_trading.py  test_trading_engine.py  test_volatility_regime_features.py
(+22 files in other folders)
